--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 			<source src="./assets/keaton_AdobeExpress.mp4" type="video/mp4">
 		</video>
 		<img src="./assets/Neighborhood_Ahead.png" alt="Neighbourhood ahead sign" />
-		<img src="./assets/race.webp" alt="Race" />
+		<img src="./assets/race.webp" alt="old black and white race cars" />
 	</div>
 </body>
 </html>
